fix(tab): prevent border shifting when active (#207)

--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -59,7 +59,6 @@
                 "tabs-link-active-border-bottom-color"
             );
             color: css.getVar("tabs-link-active-color");
-            margin-bottom: 0;
 
             &:focus {
                 border-bottom-color: css.getVar(
